2004-05-17  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Add symbols flockfile, ftrylockfile, funlockfile,
	getgrgid_r, getgrnam_r and getlogin_r.
	* grp.cc (getgrgid_r): New function.
	(getgrnam_r): Ditto.
	* syscalls.cc (flockfile): Ditto.
	(ftrylockfile): Ditto.
	(funlockfile): Ditto.
	* sysconf.cc (sysconf): Return LOGIN_NAME_MAX in case of
	_SC_LOGIN_NAME_MAX.
	* thread.cc (__cygwin_lock_trylock): Define int.  Return value from
	call to pthread_mutex_trylock.
	* uinfo.cc (getlogin_r): New function.
	* include/limits.h: Define LOGIN_NAME_MAX.
	* include/cygwin/version.h: Bump API minor number.
	* include/sys/lock.h: Add declarations for __cygwin_lock_xxx functions.
	* include/sys/stdio.h: Add define for _ftrylockfile.

2004-05-17  Christopher Faylor  <cgf@alum.bu.edu>

	* tty.cc (tty_list::init): Move hmaster initialization earlier to
	prevent compilation error.

2004-05-17  Christopher Faylor  <cgf@alum.bu.edu>

	Change the name "title_mutex" to "tty_mutex" throughout.
	* tty.h (tty_list::allocate_tty): Turn argument into a boolean.
	* tty.cc (tty_list::init): Protect entire allocation operation with
	tty_mutex (formerly title_mutex) to protect against allocation races.

2004-05-16  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::recvfrom): Use original flags
	value in each WSARecvFrom call.
	(fhandler_socket::recvmsg): Ditto.  Reformat slightly.

2004-05-15  Christopher Faylor  <cgf@alum.bu.edu>

	* cygthread.cc (cygthread::is): Eliminate.
	* cygthread.h (cygthread::is): Eliminate declaratin.
	* fhandler_console.cc (fhandler_console::read): Only wait for
	signal_arrived in the main thread.
	* fhandler_socket.cc: Include new "wininfo.h".
	(fhandler_socket::ioctl): Use 'winmsg' rather than 'gethwnd()'.
	* sync.cc (muto::grab): Define new function.
	(muto::acquire): Use tls pointer rather than tid.
	(muto::acquired): Ditto.
	(muto::reset): Delete.
	(muto::release): Ditto.  Also implement "close on last release".